# pyra

./: README.md  pyproject.toml
src/pyra/: column.py  io.py  relations.py
tests/: test_column.py  test_io.py  test_relations.py  test_unary.py
tests/testdata/: relation.csv
